--- a/website/style.css
+++ b/website/style.css
@@ -3,7 +3,6 @@
 * {
 	margin: 0;
 	padding: 0;
-			overflow-x: none;
 }
 
 :root {
